# deutsch_tg_bot

./: .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  justfile  main.py  pyproject.toml
deutsch_tg_bot/: __init__.py  bot.py  config.py  data_types.py  deutsh_enums.py  nestedconversationbot.py  tg_progress.py  user_session.py
deutsch_tg_bot/ai/: __init__.py  anthropic_utils.py  prompt_utils.py  question_answering.py  sentence_generator.py  translation_evalution.py
deutsch_tg_bot/ai/prompts/: answer_question.txt  generate_sentence.txt  generate_sentence_system.txt  generate_sentence_user.txt  sentence_themes.txt  translation_evaluation.txt
deutsch_tg_bot/command_handlers/: excercise.py  start.py  stop.py  training.py
deutsch_tg_bot/situation_training/: __init__.py  handler.py  scene_state.py  situations.py  tg_router.py
deutsch_tg_bot/situation_training/ai/: __init__.py  data_types.py  grammar_checker.py  model_settings.py  narrator_agent.py  npc_agent.py  situation_agent.py  situation_generator.py
deutsch_tg_bot/situation_training/ai/prompts/: character_system_prompt.txt  generate_situation.txt  grammar_check.txt  initial_scene_prompt.txt  narrator_event_prompt.txt  narrator_system_prompt.txt
deutsch_tg_bot/translation_training/: __init__.py  handler.py  tg_router.py
deutsch_tg_bot/translation_training/ai/: __init__.py  question_answering.py  sentence_generator.py  translation_evaluation.py
deutsch_tg_bot/translation_training/ai/prompts/: generate_sentence.txt  translation_evaluation.txt
deutsch_tg_bot/utils/: asyncio.py  handler_validation.py  prompt_utils.py  random_selector.py
